--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,6 +2,11 @@
 
 <h1>Students</h1>
 
+<h1>Welcome</h1>
+<%= button_to "Login", '/login', method: :get%>
+<%= button_to "Sign Up", '/students/new', method: :get%>
+
+<!--
 <div id="students">
   <% @students.each do |student| %>
     <%= render student %>
@@ -10,5 +15,7 @@
     </p>
   <% end %>
 </div>
+-->
+
 
 <%= link_to "New student", new_student_path %>
