--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,7 +9,7 @@
       <ul class="nav navbar-nav ms-auto mb-2 mb-lg-0">
         <% if !member_signed_in? %>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <%= link_to 'Admin', new_admin_session_path, class: 'nav-link' %>
           </li>
 
           <li class="nav-item dropdown">
@@ -33,12 +33,20 @@
           </li>
 
           <li class="nav-item">
-            <%= link_to 'About Us', home_about_path, class:'nav-link' %>
+            <%= link_to 'About Us', home_about_path, class: 'nav-link' %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'About Us', home_about_path, class:'nav-link' %>
+            <%= link_to 'About Us', home_about_path, class: 'nav-link' %>
           </li>
+          <% if admin_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Edit Profile", edit_admin_registration_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete, data: { turbo_method: :delete }, class: 'nav-link' %>
+            </li>
+          <% end %>
         <% end %>
       </ul>
     </div>
