--- a/app/views/instructors/registrations/edit.html.erb
+++ b/app/views/instructors/registrations/edit.html.erb
@@ -4,29 +4,29 @@
   </div>
   <div class="card-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= render "admins/shared/error_messages", resource: resource %>
+      <%= render "instructors/shared/error_messages", resource: resource %>
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", placeholder: 'Name' %>
+          <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: 'Name' %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: 'Email', disabled: true %>
+          <%= f.text_field :department, autofocus: true, class: "form-control", placeholder: 'Department' %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: "form-control", placeholder: 'Phone' %>
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: 'Email', disabled: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
           <%= f.label :current_password %> <i>(Need current password to confirm your changes)</i><br/>
-          <%= f.password_field :current_password, autofocus: true, autocomplete: "current-password", class: "form-control", placeholder: 'Current Password' %>
+          <%= f.password_field :current_password, autofocus: true, class: "form-control", placeholder: 'Current Password' %>
         </div>
       </div>
 
