--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New course</h1>
-
+<h2>New course</h2>
 <%= render "form", course: @course %>
-
 <br>
-
-<div>
-  <%= link_to "Back to courses", courses_path %>
-</div>
+<%= render "courses/links" %>
