--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing course</h1>
-
+<h1 align="center">Editing course</h1>
 <%= render "form", course: @course %>
-
 <br>
-
 <div>
-  <%= link_to "Show this course", @course %> |
-  <%= link_to "Back to courses", courses_path %>
+  <%= render "courses/links" %>
 </div>
