--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,14 +1,39 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Courses</h1>
-
-<div id="courses">
-  <% @courses.each do |course| %>
-    <%= render course %>
-    <p>
-      <%= link_to "Show this course", course %>
-    </p>
-  <% end %>
+<h1><strong>Courses</strong></h1>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover align-middle">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Course Code</th>
+        <th scope="col">Name</th>
+        <th scope="col">Room</th>
+        <th scope="col">Days</th>
+        <th scope="col">Time</th>
+        <th scope="col">Instructor</th>
+        <th scope="col">Status</th>
+        <th scope="col">Capacity</th>
+        <th scope="col">Waitlist Capacity</th>
+        <th colspan="2"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= link_to course.code, course %></td>
+        <td><%= course.name%></td>
+        <td><%= course.room %></td>
+        <td><%= course.weekday1 %> <%= course.weekday2 %></td>
+        <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
+        <td><%= course.instructor_name %></td>
+        <td><%= course.status %></td>
+        <td><%= course.capacity %></td>
+        <td><%= course.waitlist_capacity %></td>
+        <td><%= link_to 'Edit', edit_course_path(course), class:'btn btn-outline-primary'%></td>
+        <td><%= link_to 'Delete', course, method: :delete, data: { turbo_method: :delete,
+                                                                   turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 </div>
+<%= link_to "New course", new_course_path, class:'btn btn-secondary'%>
 
-<%= link_to "New course", new_course_path %>
