--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,32 +1,38 @@
-<h1>Instructors home</h1>
+<h1 align="center"><strong>Instructors home</strong></h1>
 
-<table class="table table-striped table-bordered table-hover">
-  <thead class="table-dark">
-  <tr>
-    <th scope="col">Course Code</th>
-    <th scope="col">Name</th>
-    <th scope="col">Room</th>
-    <th scope="col">Status</th>
-    <th scope="col">Capacity</th>
-    <th scope="col">Waitlist Capacity</th>
-    <th colspan="2"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @courses.each do |course| %>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover align-middle">
+    <thead class="table-dark">
     <tr>
-      <td><%= link_to course.code, course %></td>
-      <td><%= course.name%></td>
-      <td><%= course.room %></td>
-      <td><%= course.status %></td>
-      <td><%= course.capacity %></td>
-      <td><%= course.waitlist_capacity %></td>
-      <td><%= link_to 'Edit', edit_course_path(course), class:'btn btn-outline-primary'%></td>
-      <td><%= link_to 'Delete', course, method: :delete, data: { turbo_method: :delete,
-                                                                 turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+      <th scope="col">Course Code</th>
+      <th scope="col">Name</th>
+      <th scope="col">Room</th>
+      <th scope="col">Days</th>
+      <th scope="col">Time</th>
+      <th scope="col">Status</th>
+      <th scope="col">Capacity</th>
+      <th scope="col">Waitlist Capacity</th>
+      <th colspan="2"></th>
     </tr>
-  <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= link_to course.code, course %></td>
+        <td><%= course.name%></td>
+        <td><%= course.room %></td>
+        <td><%= course.weekday1 %> <%= course.weekday2 %></td>
+        <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
+        <td><%= course.status %></td>
+        <td><%= course.capacity %></td>
+        <td><%= course.waitlist_capacity %></td>
+        <td><%= link_to 'Edit', edit_course_path(course), class:'btn btn-outline-primary'%></td>
+        <td><%= link_to 'Delete', course, method: :delete, data: { turbo_method: :delete,
+                                                                   turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
 <%= link_to "New course", new_course_path, class:'btn btn-secondary'%>
