--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,2 +1,33 @@
 <h1>Students#home</h1>
+
+<table class="table table-striped table-bordered table-hover">
+  <thead class="table-dark">
+  <tr>
+    <th scope="col">Course Code</th>
+    <th scope="col">Name</th>
+    <th scope="col">Room</th>
+    <th scope="col">Status</th>
+    <th scope="col">Capacity</th>
+    <th scope="col">Waitlist Capacity</th>
+    <th colspan="2"></th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @courses.each do |course| %>
+    <tr>
+      <td><%= link_to course.code, course %></td>
+      <td><%= course.name%></td>
+      <td><%= course.room %></td>
+      <td><%= course.status %></td>
+      <td><%= course.capacity %></td>
+      <td><%= course.waitlist_capacity %></td>
+      <td><%= button_to 'Enroll in Course', enrolls_path(:student_id => @student.id, :course_id => course.code), method: :post, class:'btn btn-outline-primary'%></td>
+      <td><%= link_to 'Unenroll', course, method: :delete, data: { turbo_method: :delete,
+                                                                 turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+<br>
+
 <p>Find me in app/views/students/home.html.erb</p>
