--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -22,8 +22,8 @@
       <td><%= course.capacity %></td>
       <td><%= course.waitlist_capacity %></td>
       <td><%= button_to 'Enroll in Course', enrolls_path(:student_id => @student.id, :course_id => course.code), method: :post, class:'btn btn-outline-primary'%></td>
-      <td><%= link_to 'Unenroll', course, method: :delete, data: { turbo_method: :delete,
-                                                                 turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+<!--      <td><%#= link_to 'Unenroll', course, method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>-->
+      <td><%= button_to 'Unenroll from Course', Enroll.where(:student_id => @student.id, :course_id => course.code).first, method: :delete, class:'btn btn-outline-danger btn-sm'%></td>
     </tr>
   <% end %>
   </tbody>
