Admin can create, update, edit and delete instructor

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -42,17 +42,14 @@
             <li class="nav-item">
               <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete, data: { turbo_method: :delete }, class: 'nav-link' %>
             </li>
-          <% end %>
-          <% if instructor_signed_in? %>
+          <% elsif instructor_signed_in? %>
             <li class="nav-item">
               <%= link_to "Edit Profile", edit_instructor_registration_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
               <%= link_to 'Sign Out', destroy_instructor_session_path, method: :delete, data: { turbo_method: :delete }, class: 'nav-link' %>
             </li>
-          <% end %>
-
-          <% if student_signed_in? %>
+          <% elsif student_signed_in? %>
             <li class="nav-item">
               <%= link_to "Edit Profile", edit_student_registration_path, class: "nav-link" %>
             </li>
