--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,3 +1,4 @@
+<h1 align="center">Welcome to Admin Home Page</h1>
 <section class="tiles">
   <div class="container">
     <div class="row">
@@ -7,9 +8,16 @@
             <%= link_to 'Instructors', admin_instructors_path %>
           </div>
         </div>
+
         <div class="col-md-4 col-lg-4">
           <div class="link-tiles">
             <a href="#">Students</a>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-lg-4">
+          <div class="link-tiles">
+            <%= link_to 'Courses', admin_courses_path %>
           </div>
         </div>
       </div>
