--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -26,7 +26,7 @@
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :major, class:"form-control", placeholder:'Major' %>
+          <%= f.text_field :major, class:"form-control", placeholder:'Major', disabled: true %>
         </div>
       </div>
 
@@ -56,5 +56,3 @@
     <% end %>
   </div>
 </div>
-<br>
-<%= render "students/shared/links" %>
