Admin can create/read/update/delete instructors, courses, students, enroll

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -11,7 +11,7 @@
 
         <div class="col-md-4 col-lg-4">
           <div class="link-tiles">
-            <a href="#">Students</a>
+            <%= link_to 'Students', admin_students_path %>
           </div>
         </div>
 
