--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
-<h2 align="center">Students</h2>
+<h2 align="center">Available Courses</h2>
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
   <tr>
@@ -15,21 +15,19 @@
   </tr>
   </thead>
   <tbody>
-  <% unless @courses.nil? %>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= link_to course.code, course %></td>
-        <td><%= course.name %></td>
-        <td><%= course.room %></td>
-        <td><%= course.weekday1 %> <%= course.weekday2 %></td>
-        <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
-        <td><%= course.instructor_name %></td>
-        <td><%= course.status %></td>
-        <td><%= course.capacity %></td>
-        <td><%= course.waitlist_capacity %></td>
-        <td><%= button_to 'Enroll', enrolls_path(:student_id => @student.id, :course_id => course.code), method: :post, class:'btn btn-outline-primary'%></td>
-      </tr>
-    <% end %>
+  <% @courses.each do |course| %>
+    <tr>
+      <td><%= link_to course.code, course %></td>
+      <td><%= course.name %></td>
+      <td><%= course.room %></td>
+      <td><%= course.weekday1 %> <%= course.weekday2 %></td>
+      <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
+      <td><%= course.instructor_name %></td>
+      <td><%= course.status %></td>
+      <td><%= course.capacity %></td>
+      <td><%= course.waitlist_capacity %></td>
+      <td><%= button_to 'Enroll', enrolls_path(:student_id => @student.id, :course_id => course.code), method: :post, class: 'btn btn-outline-primary' %></td>
+    </tr>
   <% end %>
   </tbody>
 </table>
