--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -7,7 +7,7 @@
       <%= render "admins/shared/error_messages", resource: resource %>
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", placeholder: 'Name' %>
+          <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: 'Name', required: true %>
         </div>
       </div>
 
@@ -19,14 +19,14 @@
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: "form-control", placeholder: 'Phone' %>
+          <%= f.text_field :phone, autofocus: true, class: "form-control", placeholder: 'Phone', required: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
           <%= f.label :current_password %> <i>(Need current password to confirm your changes)</i><br/>
-          <%= f.password_field :current_password, autofocus: true, autocomplete: "current-password", class: "form-control", placeholder: 'Current Password' %>
+          <%= f.password_field :current_password, autofocus: true, class: "form-control", placeholder: 'Current Password', required: true %>
         </div>
       </div>
 
