--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -2,5 +2,5 @@
 <%= render "form", course: @course %>
 <br>
 <div>
-  <%= render "courses/links" %>
+  <%= link_to "Back", :back, class: 'btn btn-dark' %>
 </div>
