--- a/app/views/instructors/registrations/edit.html.erb
+++ b/app/views/instructors/registrations/edit.html.erb
@@ -7,13 +7,13 @@
       <%= render "instructors/shared/error_messages", resource: resource %>
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: 'Name' %>
+          <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: 'Name', required: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :department, autofocus: true, class: "form-control", placeholder: 'Department' %>
+          <%= f.text_field :department, autofocus: true, class: "form-control", placeholder: 'Department', required: true %>
         </div>
       </div>
 
@@ -26,7 +26,7 @@
       <div class="row mb-3">
         <div class="col-sm-6">
           <%= f.label :current_password %> <i>(Need current password to confirm your changes)</i><br/>
-          <%= f.password_field :current_password, autofocus: true, class: "form-control", placeholder: 'Current Password' %>
+          <%= f.password_field :current_password, autofocus: true, class: "form-control", placeholder: 'Current Password', required: true %>
         </div>
       </div>
 
