--- a/app/views/instructors/registrations/new.html.erb
+++ b/app/views/instructors/registrations/new.html.erb
@@ -8,25 +8,25 @@
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :name, class:"form-control", placeholder:'Name' %>
+          <%= f.text_field :name, class: "form-control", placeholder: 'Name', required: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :department, class:"form-control", placeholder:'Department' %>
+          <%= f.text_field :department, class: "form-control", placeholder: 'Department', required: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.text_field :email, class:"form-control", placeholder:'Email' %>
+          <%= f.text_field :email, class: "form-control", placeholder: 'Email', required: true %>
         </div>
       </div>
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.password_field :password, class:"form-control", placeholder:'Password' %>
+          <%= f.password_field :password, class: "form-control", placeholder: 'Password', required: true %>
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
@@ -35,7 +35,7 @@
 
       <div class="row mb-3">
         <div class="col-sm-6">
-          <%= f.password_field :password_confirmation, class:"form-control", placeholder:'Password Confirmation' %>
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder: 'Password Confirmation', required: true %>
         </div>
       </div>
 
