--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -62,3 +62,34 @@
   <% end %>
   </tbody>
 </table>
+
+<br>
+<h2 align="center">Waitlisted Courses</h2>
+
+<table class="table table-striped table-bordered table-hover">
+  <thead class="table-dark">
+  <tr>
+    <th scope="col">Course Code</th>
+    <th scope="col">Name</th>
+    <th scope="col">Instructor</th>
+    <th scope="col">Days</th>
+    <th scope="col">Time</th>
+    <th scope="col">Room</th>
+    <th colspan="1"></th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @waitlistedcourses.each do |course| %>
+    <tr>
+      <td><%= link_to course.code, course %></td>
+      <td><%= course.name %></td>
+      <td><%= course.instructor_name %></td>
+      <td><%= course.weekday1 %> <%= course.weekday2 %></td>
+      <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
+      <td><%= course.room %></td>
+      <td><%= link_to 'Drop', Enroll.where(:student_id => @student.id, :course_id => course.code).first, method: :delete,
+                      data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: 'btn btn-outline-danger' %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
