--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center"><strong>Instructors home</strong></h1>
+<h1 align="center"><strong>Courses</strong></h1>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover align-middle">
@@ -12,27 +12,31 @@
       <th scope="col">Status</th>
       <th scope="col">Capacity</th>
       <th scope="col">Waitlist Capacity</th>
-      <th colspan="2"></th>
+      <th colspan="4"></th>
     </tr>
     </thead>
     <tbody>
     <% @courses.each do |course| %>
       <tr>
         <td><%= link_to course.code, course %></td>
-        <td><%= course.name%></td>
+        <td><%= course.name %></td>
         <td><%= course.room %></td>
         <td><%= course.weekday1 %> <%= course.weekday2 %></td>
         <td><%= course.formatted_start_time %> - <%= course.formatted_end_time %></td>
         <td><%= course.status %></td>
         <td><%= course.capacity %></td>
         <td><%= course.waitlist_capacity %></td>
-        <td><%= link_to 'Edit', edit_course_path(course), class:'btn btn-outline-primary'%></td>
+        <td><%= link_to 'Enroll', course_enroll_students_path(id: course.code), class: 'btn btn-outline-success' %></td>
+        <td><%= link_to 'Enrolled', course_enrolled_students_path(id: course.code), class: 'btn btn-outline-primary' %></td>
+        <td><%= link_to 'Edit', edit_course_path(course), class: 'btn btn-outline-info' %></td>
         <td><%= link_to 'Delete', course, method: :delete, data: { turbo_method: :delete,
-                                                                   turbo_confirm: "Are you sure?" }, class:'btn btn-outline-danger btn-sm'%></td>
+                                                                   turbo_confirm: "Are you sure?" }, class: 'btn btn-outline-danger' %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 </div>
 <br>
-<%= link_to "New course", new_course_path, class:'btn btn-secondary'%>
+<div>
+  <%= link_to "New course", new_course_path, class: 'btn btn-secondary' %>
+</div>
