--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <%= form_with(model: @student, local: true) do |f| %>
-      <%= render "students/shared/error_messages", resource: @student %>
+      <%= render "home/error_messages", resource: @student %>
 
       <div class="row mb-3">
         <div class="col-sm-6">
