--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= render "admins/shared/error_messages", resource: resource %>
+      <%= render "home/error_messages", resource: resource %>
       <div class="row mb-3">
         <div class="col-sm-6">
           <%= f.text_field :name, autofocus: true, class: "form-control", placeholder: 'Name', required: true %>
