--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,13 +1,5 @@
 <%= form_with(model: course, local: true) do |form| %>
-  <% if course.errors.any? %>
-    <div style="color: red">
-      <ul>
-        <% course.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render "home/error_messages", resource: course %>
 
   <div class="row mb-3">
     <div class="col-sm-6">
