--- a/app/views/instructors/registrations/new.html.erb
+++ b/app/views/instructors/registrations/new.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "instructors/shared/error_messages", resource: resource %>
+      <%= render "home/error_messages", resource: resource %>
 
       <div class="row mb-3">
         <div class="col-sm-6">
