validation and schema changes

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,17 +1,21 @@
 <div class="card" style="width: 24rem;">
   <div class="card-body">
-    <h5 class="card-title"><%= @course.code %> | <%= @course.name%></h5>
-    <p class="card-text"><%= @course.description%></p>
+    <h5 class="card-title"><%= @course.code %> | <%= @course.name %></h5>
+    <p class="card-text"><%= @course.description %></p>
   </div>
 
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><strong>Instructor:</strong> <%= @course.instructor_name %></li>
     <li class="list-group-item"><strong>Room:</strong> <%= @course.room %></li>
-    <li class="list-group-item"><strong>Schedule:</strong> <%= @course.formatted_start_time %> - <%= @course.formatted_end_time %>,
+    <li class="list-group-item"><strong>Schedule:</strong> <%= @course.formatted_start_time %>
+      - <%= @course.formatted_end_time %>,
       <%= @course.weekday1 %> <%= @course.weekday2 %></li>
     <li class="list-group-item"><strong>Status:</strong> <%= @course.status %></li>
-    <li class="list-group-item"><strong>Available Seats:</strong> <%= @course.capacity %></li>
-    <li class="list-group-item"><strong>WaitList Capacity:</strong> <%= @course.waitlist_capacity %></li>
+    <li class="list-group-item"><strong>Available Seats:</strong> <%= @course.capacity - @course.enrolled %>
+      Of <%= @course.capacity %></li>
+    <li class="list-group-item">
+      <strong>WaitList Capacity:</strong> <%= @course.waitlist_capacity - @course.wait_listed %>
+      Of <%= @course.waitlist_capacity %></li>
   </ul>
 
   <div class="card-body">
