--- a/app/views/admins/students.html.erb
+++ b/app/views/admins/students.html.erb
@@ -21,7 +21,7 @@
         <td><%= student.email %></td>
         <td><%= student.phone %></td>
         <td><%= student.major %></td>
-        <td><%= link_to 'Enroll', student_root_path(id: student.student_id), class: 'btn btn-outline-success' %></td>
+        <td><%= link_to 'Enroll', student_root_path(student_id: student.student_id), class: 'btn btn-outline-success' %></td>
         <td><%= link_to 'Edit', edit_student_path(student), class: 'btn btn-outline-info' %></td>
         <td><%= link_to 'Delete', student, method: :delete,
                         data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
