Error message on signin page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
 <h1 align="center">Welcome to Student Enrollment Application</h1>
+<p>There are three different type of users i.e. Admin, Instructor and Student</p>
+<p>All the users have their <b>own login and signup</b> page, select the user from the header on top as per your role.
+</p>
