--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <%= render 'home/header' %>
 <div class="container">
   <br/>
-  <% if notice %>
+  <% if notice || alert %>
     <%= render 'layouts/alerts' %>
   <% end %>
   <%= yield %>
