--- a/app/views/admins/instructors.html.erb
+++ b/app/views/admins/instructors.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to 'Courses', instructor_courses_url(instructor), class: 'btn btn-outline-primary' %></td>
         <td><%= link_to 'Edit', edit_instructor_path(instructor), class: 'btn btn-outline-info' %></td>
         <td><%= link_to 'Delete', instructor, method: :delete, data: { turbo_method: :delete,
-                                                                       turbo_confirm: "Are you sure?" }, class: 'btn btn-outline-danger btn-sm' %></td>
+                                                                       turbo_confirm: "Are you sure?" }, class: 'btn btn-outline-danger' %></td>
       </tr>
     <% end %>
     </tbody>
